--- a/.github/workflows/maven-ios.yml
+++ b/.github/workflows/maven-ios.yml
@@ -19,12 +19,12 @@ jobs:
       with:
         graalvm-version: 20.2.0.java11
     - uses: Apple-Actions/import-codesign-certs@v1
-      if: ${{ github.repository_owner == 'gluonhq' }} 
+      if: ${{ github.repository_owner == 'erwin1' }} 
       with:
         p12-file-base64: ${{ secrets.CERTIFICATES_FILE_BASE64 }}
         p12-password: ${{ secrets.CERTIFICATES_PASSWORD }}
     - uses: Apple-Actions/download-provisioning-profiles@v1
-      if: ${{ github.repository_owner == 'gluonhq' }} 
+      if: ${{ github.repository_owner == 'erwin1' }} 
       with:
         bundle-id: be.webtechie.ResistorCalculatorApp
         issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
@@ -40,10 +40,10 @@ jobs:
       run: mvn -Pios -DskipIOSSigning=${skipIOSSigning} client:build client:package
       env:
         GRAALVM_HOME: ${{ env.JAVA_HOME }}
-        skipIOSSigning: ${{ github.repository_owner != 'gluonhq' }}
+        skipIOSSigning: ${{ github.repository_owner != 'erwin1' }}
 
     - uses: Apple-Actions/upload-testflight-build@master
-      if: ${{ github.repository_owner == 'gluonhq' }} 
+      if: ${{ github.repository_owner == 'erwin1' }} 
       with:
         app-path: target/client/arm64-ios/Resistor Calculator.ipa
         issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
